Bug 177999 - Export tools shortcuts are not listed in the shortcuts editor from digiKam
Summary: Export tools shortcuts are not listed in the shortcuts editor from digiKam
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Usability-Keyboard (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-12-17 17:41 UTC by Andi Clemens
Modified: 2018-03-23 11:44 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.2.0
Sentry Crash Report:


Attachments
no shortcuts visible (22.56 KB, image/png)
2008-12-17 17:42 UTC, Andi Clemens
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andi Clemens 2008-12-17 17:41:38 UTC
Version:            (using KDE 4.1.3)
OS:                Linux
Installed from:    Compiled From Sources

The shortcuts are displayed randomly in the shortcuts editor dialog. Most of the time they are not visible, sometimes only the HTML export plugin is displayed.
Comment 1 Andi Clemens 2008-12-17 17:42:54 UTC
Created attachment 29397 [details]
no shortcuts visible

The screenshot was taken after removing the digikamrc file and starting with a fresh config file. No entries can be found.
Comment 2 caulier.gilles 2008-12-17 18:16:24 UTC
Andi,

Comment code like this:

void DigikamApp::slotEditKeys()
{
    KShortcutsDialog dialog(KShortcutsEditor::AllActions,
                            KShortcutsEditor::LetterShortcutsAllowed, this);
    dialog.addCollection( actionCollection(), i18n( "General" ) );

/*
    KIPI::PluginLoader::PluginList list = d->kipiPluginLoader->pluginList();

    for( KIPI::PluginLoader::PluginList::Iterator it = list.begin() ; it != list.end() ; ++it )
    {
        KIPI::Plugin* plugin = (*it)->plugin();
        if ( plugin )
           dialog.addCollection(plugin->actionCollection(), (*it)->comment());
    }
*/
    dialog.configure();
}

... and digiKam shorcuts are here. Sound like a problem with kipi-plugins...

Gilles
Comment 3 Andi Clemens 2008-12-17 18:19:56 UTC
/me hopes it is not my fault :-) I'll check my KIPI Plugin...
Comment 4 caulier.gilles 2008-12-17 18:34:39 UTC
SVN commit 898197 by cgilles:

digiKam from trunk : fix iterator to fill kipi-plugins keyboard shorcuts
BUG: 177999


 M  +5 -6      digikamapp.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=898197
Comment 5 Andi Clemens 2008-12-17 18:43:25 UTC
That seems to fix the main problem, but still only the HTML plugin is listed in there... all other KIPI Plugins are not shown in the editor.

Andi
Comment 6 caulier.gilles 2008-12-17 18:49:09 UTC
Andi,

Editor do not support kipi-plugins. Why do you want to add kipi shortcuts here ?

Gilles
Comment 7 Andi Clemens 2008-12-17 18:53:36 UTC
;-)

I was talking about the shortcut editor, not the image editor component.
KIPI Plugins are not listed correctly in the shortcuts editor. Only HTML Export is in there.

Andi
Comment 8 caulier.gilles 2008-12-17 20:23:08 UTC
SVN commit 898223 by cgilles:

SlideShow kipi-plugin: fix registration in ActionCollection
CCBUG: 177999


 M  +8 -7      plugin_slideshow.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=898223
Comment 9 caulier.gilles 2008-12-17 20:24:40 UTC
Andi,

Look my commit #898223. All kipi-plugins need to be fixed in a same this way...

Gilles
Comment 10 Andi Clemens 2008-12-17 22:43:14 UTC
SVN commit 898289 by aclemens:

JPEGLossLess kipi-plugin: fix registration in ActionCollection

BUG:177999

 M  +13 -12    plugin_jpeglossless.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=898289