JPEGLossLess kipi-plugin: fix registration in ActionCollection

BUG:177999

svn path=/trunk/extragear/graphics/kipi-plugins/; revision=898289